Lab/Code/syntax.output
State 21 conflicts: 1 shift/reduce
State 143 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Epsilon: %empty

    2 Program: ExtDefList

    3 ExtDefList: ExtDef ExtDefList
    4           | Epsilon

    5 ExtDef: Specifier ExtDecList SEMI
    6       | Specifier SEMI
    7       | Specifier FunDec CompSt
    8       | Specifier ExtDecList error
    9       | Specifier error
   10       | error SEMI

   11 ExtDecList: VarDec
   12           | VarDec COMMA ExtDecList
   13           | VarDec COMMA error
   14           | VarDec error ExtDecList
   15           | VarDec error

   16 Specifier: TYPE
   17          | StructSpecifier

   18 StructSpecifier: STRUCT OptTag LC DefList RC
   19                | STRUCT Tag
   20                | STRUCT OptTag LC error
   21                | STRUCT OptTag LC error RC

   22 OptTag: ID
   23       | Epsilon

   24 Tag: ID

   25 VarDec: ID
   26       | VarDec LB INT RB
   27       | VarDec LB error RB

   28 FunDec: ID LP VarList RP
   29       | ID LP RP
   30       | error RP

   31 VarList: ParamDec COMMA VarList
   32        | ParamDec
   33        | ParamDec COMMA error
   34        | ParamDec error VarList

   35 ParamDec: Specifier VarDec
   36         | Specifier error
   37         | error VarDec

   38 CompSt: LC DefList StmtList RC
   39       | error RC

   40 StmtList: Stmt StmtList
   41         | Epsilon

   42 Stmt: Exp SEMI
   43     | CompSt
   44     | RETURN Exp SEMI
   45     | IF LP Exp RP Stmt
   46     | IF LP Exp RP Stmt ELSE Stmt
   47     | WHILE LP Exp RP Stmt
   48     | Exp error
   49     | RETURN Exp error
   50     | error SEMI

   51 DefList: Def DefList
   52        | Epsilon

   53 Def: Specifier DecList SEMI
   54    | Specifier DecList error
   55    | Specifier error

   56 DecList: Dec
   57        | Dec COMMA DecList
   58        | Dec COMMA error

   59 Dec: VarDec
   60    | VarDec ASSIGNOP Exp
   61    | error ASSIGNOP Exp

   62 Exp: Exp ASSIGNOP Exp
   63    | Exp AND Exp
   64    | Exp OR Exp
   65    | Exp RELOP Exp
   66    | Exp PLUS Exp
   67    | Exp MINUS Exp
   68    | Exp STAR Exp
   69    | Exp DIV Exp
   70    | LP Exp RP
   71    | MINUS Exp
   72    | NOT Exp
   73    | ID LP Args RP
   74    | ID LP RP
   75    | Exp LB Exp RB
   76    | Exp DOT ID
   77    | ID
   78    | INT
   79    | FLOAT
   80    | error RP

   81 Args: Exp COMMA Args
   82     | Exp
   83     | error COMMA Args


Terminals, with rules where they appear

    $end (0) 0
    error (256) 8 9 10 13 14 15 20 21 27 30 33 34 36 37 39 48 49 50 54 55 58 61 80 83
    STRUCT <ast_node> (258) 18 19 20 21
    RETURN <ast_node> (259) 44 49
    IF <ast_node> (260) 45 46
    ELSE <ast_node> (261) 46
    WHILE <ast_node> (262) 47
    SEMI <ast_node> (263) 5 6 10 42 44 50 53
    COMMA <ast_node> (264) 12 13 31 33 57 58 81 83
    TYPE <ast_node> (265) 16
    ASSIGNOP <ast_node> (266) 60 61 62
    RELOP <ast_node> (267) 65
    PLUS <ast_node> (268) 66
    MINUS <ast_node> (269) 67 71
    STAR <ast_node> (270) 68
    DIV <ast_node> (271) 69
    AND <ast_node> (272) 63
    OR <ast_node> (273) 64
    DOT <ast_node> (274) 76
    NOT <ast_node> (275) 72
    LP <ast_node> (276) 28 29 45 46 47 70 73 74
    RP <ast_node> (277) 28 29 30 45 46 47 70 73 74 80
    LB <ast_node> (278) 26 27 75
    RB <ast_node> (279) 26 27 75
    LC <ast_node> (280) 18 20 21 38
    RC <ast_node> (281) 18 21 38 39
    ID <ast_node> (282) 22 24 25 28 29 73 74 76 77
    INT <ast_node> (283) 26 78
    FLOAT <ast_node> (284) 79
    UMINUS (285)
    LOWER_THAN_ELSE (286)


Nonterminals, with rules where they appear

    $accept (32)
        on left: 0
    Epsilon <ast_node> (33)
        on left: 1
        on right: 4 23 41 52
    Program <ast_node> (34)
        on left: 2
        on right: 0
    ExtDefList <ast_node> (35)
        on left: 3 4
        on right: 2 3
    ExtDef <ast_node> (36)
        on left: 5 6 7 8 9 10
        on right: 3
    ExtDecList <ast_node> (37)
        on left: 11 12 13 14 15
        on right: 5 8 12 14
    Specifier <ast_node> (38)
        on left: 16 17
        on right: 5 6 7 8 9 35 36 53 54 55
    StructSpecifier <ast_node> (39)
        on left: 18 19 20 21
        on right: 17
    OptTag <ast_node> (40)
        on left: 22 23
        on right: 18 20 21
    Tag <ast_node> (41)
        on left: 24
        on right: 19
    VarDec <ast_node> (42)
        on left: 25 26 27
        on right: 11 12 13 14 15 26 27 35 37 59 60
    FunDec <ast_node> (43)
        on left: 28 29 30
        on right: 7
    VarList <ast_node> (44)
        on left: 31 32 33 34
        on right: 28 31 34
    ParamDec <ast_node> (45)
        on left: 35 36 37
        on right: 31 32 33 34
    CompSt <ast_node> (46)
        on left: 38 39
        on right: 7 43
    StmtList <ast_node> (47)
        on left: 40 41
        on right: 38 40
    Stmt <ast_node> (48)
        on left: 42 43 44 45 46 47 48 49 50
        on right: 40 45 46 47
    DefList <ast_node> (49)
        on left: 51 52
        on right: 18 38 51
    Def <ast_node> (50)
        on left: 53 54 55
        on right: 51
    DecList <ast_node> (51)
        on left: 56 57 58
        on right: 53 54 57
    Dec <ast_node> (52)
        on left: 59 60 61
        on right: 56 57 58
    Exp <ast_node> (53)
        on left: 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80
        on right: 42 44 45 46 47 48 49 60 61 62 63 64 65 66 67 68 69 70 71 72 75 76 81 82
    Args <ast_node> (54)
        on left: 81 82 83
        on right: 73 81 83


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    $end  reduce using rule 1 (Epsilon)

    Epsilon          go to state 4
    Program          go to state 5
    ExtDefList       go to state 6
    ExtDef           go to state 7
    Specifier        go to state 8
    StructSpecifier  go to state 9


State 1

   10 ExtDef: error . SEMI

    SEMI  shift, and go to state 10


State 2

   18 StructSpecifier: STRUCT . OptTag LC DefList RC
   19                | STRUCT . Tag
   20                | STRUCT . OptTag LC error
   21                | STRUCT . OptTag LC error RC

    ID  shift, and go to state 11

    $default  reduce using rule 1 (Epsilon)

    Epsilon  go to state 12
    OptTag   go to state 13
    Tag      go to state 14


State 3

   16 Specifier: TYPE .

    $default  reduce using rule 16 (Specifier)


State 4

    4 ExtDefList: Epsilon .

    $default  reduce using rule 4 (ExtDefList)


State 5

    0 $accept: Program . $end

    $end  shift, and go to state 15


State 6

    2 Program: ExtDefList .

    $default  reduce using rule 2 (Program)


State 7

    3 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    $end  reduce using rule 1 (Epsilon)

    Epsilon          go to state 4
    ExtDefList       go to state 16
    ExtDef           go to state 7
    Specifier        go to state 8
    StructSpecifier  go to state 9


State 8

    5 ExtDef: Specifier . ExtDecList SEMI
    6       | Specifier . SEMI
    7       | Specifier . FunDec CompSt
    8       | Specifier . ExtDecList error
    9       | Specifier . error

    error  shift, and go to state 17
    SEMI   shift, and go to state 18
    ID     shift, and go to state 19

    ExtDecList  go to state 20
    VarDec      go to state 21
    FunDec      go to state 22


State 9

   17 Specifier: StructSpecifier .

    $default  reduce using rule 17 (Specifier)


State 10

   10 ExtDef: error SEMI .

    $default  reduce using rule 10 (ExtDef)


State 11

   22 OptTag: ID .
   24 Tag: ID .

    LC        reduce using rule 22 (OptTag)
    $default  reduce using rule 24 (Tag)


State 12

   23 OptTag: Epsilon .

    $default  reduce using rule 23 (OptTag)


State 13

   18 StructSpecifier: STRUCT OptTag . LC DefList RC
   20                | STRUCT OptTag . LC error
   21                | STRUCT OptTag . LC error RC

    LC  shift, and go to state 23


State 14

   19 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 19 (StructSpecifier)


State 15

    0 $accept: Program $end .

    $default  accept


State 16

    3 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 3 (ExtDefList)


State 17

    9 ExtDef: Specifier error .
   30 FunDec: error . RP

    RP  shift, and go to state 24

    $default  reduce using rule 9 (ExtDef)


State 18

    6 ExtDef: Specifier SEMI .

    $default  reduce using rule 6 (ExtDef)


State 19

   25 VarDec: ID .
   28 FunDec: ID . LP VarList RP
   29       | ID . LP RP

    LP  shift, and go to state 25

    $default  reduce using rule 25 (VarDec)


State 20

    5 ExtDef: Specifier ExtDecList . SEMI
    8       | Specifier ExtDecList . error

    error  shift, and go to state 26
    SEMI   shift, and go to state 27


State 21

   11 ExtDecList: VarDec .
   12           | VarDec . COMMA ExtDecList
   13           | VarDec . COMMA error
   14           | VarDec . error ExtDecList
   15           | VarDec . error
   26 VarDec: VarDec . LB INT RB
   27       | VarDec . LB error RB

    error  shift, and go to state 28
    COMMA  shift, and go to state 29
    LB     shift, and go to state 30

    error  [reduce using rule 11 (ExtDecList)]
    SEMI   reduce using rule 11 (ExtDecList)


State 22

    7 ExtDef: Specifier FunDec . CompSt

    error  shift, and go to state 31
    LC     shift, and go to state 32

    CompSt  go to state 33


State 23

   18 StructSpecifier: STRUCT OptTag LC . DefList RC
   20                | STRUCT OptTag LC . error
   21                | STRUCT OptTag LC . error RC

    error   shift, and go to state 34
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    RC  reduce using rule 1 (Epsilon)

    Epsilon          go to state 35
    Specifier        go to state 36
    StructSpecifier  go to state 9
    DefList          go to state 37
    Def              go to state 38


State 24

   30 FunDec: error RP .

    $default  reduce using rule 30 (FunDec)


State 25

   28 FunDec: ID LP . VarList RP
   29       | ID LP . RP

    error   shift, and go to state 39
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3
    RP      shift, and go to state 40

    Specifier        go to state 41
    StructSpecifier  go to state 9
    VarList          go to state 42
    ParamDec         go to state 43


State 26

    8 ExtDef: Specifier ExtDecList error .

    $default  reduce using rule 8 (ExtDef)


State 27

    5 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 5 (ExtDef)


State 28

   14 ExtDecList: VarDec error . ExtDecList
   15           | VarDec error .

    ID  shift, and go to state 44

    $default  reduce using rule 15 (ExtDecList)

    ExtDecList  go to state 45
    VarDec      go to state 21


State 29

   12 ExtDecList: VarDec COMMA . ExtDecList
   13           | VarDec COMMA . error

    error  shift, and go to state 46
    ID     shift, and go to state 44

    ExtDecList  go to state 47
    VarDec      go to state 21


State 30

   26 VarDec: VarDec LB . INT RB
   27       | VarDec LB . error RB

    error  shift, and go to state 48
    INT    shift, and go to state 49


State 31

   39 CompSt: error . RC

    RC  shift, and go to state 50


State 32

   38 CompSt: LC . DefList StmtList RC

    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    $default  reduce using rule 1 (Epsilon)

    Epsilon          go to state 35
    Specifier        go to state 36
    StructSpecifier  go to state 9
    DefList          go to state 51
    Def              go to state 38


State 33

    7 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 7 (ExtDef)


State 34

   20 StructSpecifier: STRUCT OptTag LC error .
   21                | STRUCT OptTag LC error . RC

    RC  shift, and go to state 52

    $default  reduce using rule 20 (StructSpecifier)


State 35

   52 DefList: Epsilon .

    $default  reduce using rule 52 (DefList)


State 36

   53 Def: Specifier . DecList SEMI
   54    | Specifier . DecList error
   55    | Specifier . error

    error  shift, and go to state 53
    ID     shift, and go to state 44

    VarDec   go to state 54
    DecList  go to state 55
    Dec      go to state 56


State 37

   18 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 57


State 38

   51 DefList: Def . DefList

    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    $default  reduce using rule 1 (Epsilon)

    Epsilon          go to state 35
    Specifier        go to state 36
    StructSpecifier  go to state 9
    DefList          go to state 58
    Def              go to state 38


State 39

   37 ParamDec: error . VarDec

    ID  shift, and go to state 44

    VarDec  go to state 59


State 40

   29 FunDec: ID LP RP .

    $default  reduce using rule 29 (FunDec)


State 41

   35 ParamDec: Specifier . VarDec
   36         | Specifier . error

    error  shift, and go to state 60
    ID     shift, and go to state 44

    VarDec  go to state 61


State 42

   28 FunDec: ID LP VarList . RP

    RP  shift, and go to state 62


State 43

   31 VarList: ParamDec . COMMA VarList
   32        | ParamDec .
   33        | ParamDec . COMMA error
   34        | ParamDec . error VarList

    error  shift, and go to state 63
    COMMA  shift, and go to state 64

    RP  reduce using rule 32 (VarList)


State 44

   25 VarDec: ID .

    $default  reduce using rule 25 (VarDec)


State 45

   14 ExtDecList: VarDec error ExtDecList .

    $default  reduce using rule 14 (ExtDecList)


State 46

   13 ExtDecList: VarDec COMMA error .

    $default  reduce using rule 13 (ExtDecList)


State 47

   12 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 12 (ExtDecList)


State 48

   27 VarDec: VarDec LB error . RB

    RB  shift, and go to state 65


State 49

   26 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 66


State 50

   39 CompSt: error RC .

    $default  reduce using rule 39 (CompSt)


State 51

   38 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 67
    RETURN  shift, and go to state 68
    IF      shift, and go to state 69
    WHILE   shift, and go to state 70
    MINUS   shift, and go to state 71
    NOT     shift, and go to state 72
    LP      shift, and go to state 73
    LC      shift, and go to state 32
    ID      shift, and go to state 74
    INT     shift, and go to state 75
    FLOAT   shift, and go to state 76

    RC  reduce using rule 1 (Epsilon)

    Epsilon   go to state 77
    CompSt    go to state 78
    StmtList  go to state 79
    Stmt      go to state 80
    Exp       go to state 81


State 52

   21 StructSpecifier: STRUCT OptTag LC error RC .

    $default  reduce using rule 21 (StructSpecifier)


State 53

   55 Def: Specifier error .
   61 Dec: error . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 82

    $default  reduce using rule 55 (Def)


State 54

   26 VarDec: VarDec . LB INT RB
   27       | VarDec . LB error RB
   59 Dec: VarDec .
   60    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 83
    LB        shift, and go to state 30

    $default  reduce using rule 59 (Dec)


State 55

   53 Def: Specifier DecList . SEMI
   54    | Specifier DecList . error

    error  shift, and go to state 84
    SEMI   shift, and go to state 85


State 56

   56 DecList: Dec .
   57        | Dec . COMMA DecList
   58        | Dec . COMMA error

    COMMA  shift, and go to state 86

    $default  reduce using rule 56 (DecList)


State 57

   18 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 18 (StructSpecifier)


State 58

   51 DefList: Def DefList .

    $default  reduce using rule 51 (DefList)


State 59

   26 VarDec: VarDec . LB INT RB
   27       | VarDec . LB error RB
   37 ParamDec: error VarDec .

    LB  shift, and go to state 30

    $default  reduce using rule 37 (ParamDec)


State 60

   36 ParamDec: Specifier error .

    $default  reduce using rule 36 (ParamDec)


State 61

   26 VarDec: VarDec . LB INT RB
   27       | VarDec . LB error RB
   35 ParamDec: Specifier VarDec .

    LB  shift, and go to state 30

    $default  reduce using rule 35 (ParamDec)


State 62

   28 FunDec: ID LP VarList RP .

    $default  reduce using rule 28 (FunDec)


State 63

   34 VarList: ParamDec error . VarList

    error   shift, and go to state 39
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    Specifier        go to state 41
    StructSpecifier  go to state 9
    VarList          go to state 87
    ParamDec         go to state 43


State 64

   31 VarList: ParamDec COMMA . VarList
   33        | ParamDec COMMA . error

    error   shift, and go to state 88
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    Specifier        go to state 41
    StructSpecifier  go to state 9
    VarList          go to state 89
    ParamDec         go to state 43


State 65

   27 VarDec: VarDec LB error RB .

    $default  reduce using rule 27 (VarDec)


State 66

   26 VarDec: VarDec LB INT RB .

    $default  reduce using rule 26 (VarDec)


State 67

   39 CompSt: error . RC
   50 Stmt: error . SEMI
   80 Exp: error . RP

    SEMI  shift, and go to state 90
    RP    shift, and go to state 91
    RC    shift, and go to state 50


State 68

   44 Stmt: RETURN . Exp SEMI
   49     | RETURN . Exp error

    error  shift, and go to state 92
    MINUS  shift, and go to state 71
    NOT    shift, and go to state 72
    LP     shift, and go to state 73
    ID     shift, and go to state 74
    INT    shift, and go to state 75
    FLOAT  shift, and go to state 76

    Exp  go to state 93


State 69

   45 Stmt: IF . LP Exp RP Stmt
   46     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 94


State 70

   47 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 95


State 71

   71 Exp: MINUS . Exp
